# tuning-library-python

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
examples/: README.md  equal_division.py  find_tone.py  map.py  show.py  similar.py  step_sizes.py
src/tuning_library/: __init__.py  tuning_library.cpp
tests/: test_tuning_library.py
tests/data/: test.kbm  test.scl  unmapped.kbm  unmapped_center.kbm
