[build-system]
requires = ["scikit-build-core>=0.11", "pybind11>=3.0"]
build-backend = "scikit_build_core.build"

[project]
name = "tuning_library"
version = "0.0.1"
description = "Python bindings for the Surge Synth Team Tuning Library"
authors = [
  { name="Naren Ratan" },
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/surge-synthesizer/tuning-library-python"
Issues = "https://github.com/surge-synthesizer/tuning-library-python/issues"
